# nonagon

./: .gitignore  Cargo.toml  default.toml
assets/: gohufont.bdf.lzma  gohufont.bold.bdf.lzma
src/: analyzer.rs  audio.rs  main.rs  util.rs  video.rs
src/analyzer/: analyzer.rs  band.rs  beats.rs  mod.rs  range.rs  spectral_flux.rs  threshold.rs  util.rs  window.rs
src/analyzer/beat/: beat.rs  mod.rs  spectral_flux.rs  state.rs  threshold.rs
src/config/: analyzer.rs  audio.rs  game.rs  mod.rs  video.rs
src/game/: bullet.rs  direction.rs  events.rs  mod.rs  orientation.rs  particle.rs  player.rs  position.rs  ship.rs  state.rs  support.rs  traits.rs  velocity.rs
src/game/projectile/: mod.rs  plasma.rs  ray.rs
src/renderer/: background.rs  mod.rs  renderer.rs  scene.rs  ship.rs  traits.rs  video.rs
src/renderer/background/: background.rs  mod.rs  video.rs  visualizer.rs
src/renderer/bullet/: mod.rs  plasma.rs  ray.rs
src/renderer/interface/: face.rs  font.rs  interface.rs  mod.rs  text.rs
src/renderer/particle/: dot.rs  mod.rs
src/renderer/projectile/: mod.rs  plasma.rs  ray.rs
src/renderer/ship/: cube.rs  mod.rs  tetrahedron.rs
src/renderer/support/: assets.rs  debug.rs  mod.rs  scene.rs  support.rs  video.rs  visualizer.rs
src/settings/: analyzer.rs  audio.rs  game.rs  mod.rs  video.rs
src/sound/: buffered.rs  mod.rs  music.rs
src/source/: audio.rs  data.rs  decoder.rs  mod.rs  video.rs
src/state/: mod.rs
src/util/: aspect.rs  color.rs  macros.rs  mod.rs  ring.rs
