[package]
name    = "nonagon"
version = "0.1.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPLv3"

[dependencies]
log        = "*"
env_logger = "*"

docopt = "*"

image = "*"

nalgebra = "*"
ncollide = "*"

[dependencies.ffmpeg]
git = "https://github.com/meh/rust-ffmpeg"

default-features = false
features         = ["codec", "format", "software-scaling", "software-resampling"]

[dependencies.openal]
git = "https://github.com/meh/rust-openal"

[dependencies.glium]
git = "https://github.com/tomaka/glium"

default-features = false
features         = ["glutin", "image", "nalgebra"]
