[package]
name    = "nonagon"
version = "0.1.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "GPLv3"

[dependencies]
log        = "*"
env_logger = "*"

docopt = "*"

image = "*"

regex = "*"

nalgebra = "*"
ncollide = "*"

toml = "*"

bdf = "*"

lzma = "*"

num = "*"

strided = "*"

[dependencies.rft]
git = "https://github.com/meh/rust-rft"

features = ["f64"]

[dependencies.ffmpeg]
git = "https://github.com/meh/rust-ffmpeg"

default-features = false
features = ["codec", "format", "software-scaling", "software-resampling"]

[dependencies.openal]
version = "0.2"

[dependencies.glium]
version = "0.8"

default-features = false
features         = ["glutin", "image", "nalgebra"]
